# power_test

./: CMakeLists.txt  ad_critical_value.cpp  compile.sh  critical_values.cpp  critical_values.hpp  distributions.cpp  distributions.hpp  main.cpp  montecarlo.cpp  montecarlo.hpp  sensitivity.cpp  simulation.hpp  test_statistics.hpp
sensitivity_plot/: sensitivity.plt
